# second-brain-rag

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  search.py
.github/workflows/: test.yml
src/: config.py  context.py  errors.py  models.py
src/embeddings/: embed.py
src/ingest/: chunker.py  error_collector.py  models.py  obsidian.py  pipeline.py  readwise.py
src/query/: generator.py  retriever.py
src/storage/: vector_store.py
tests/: test_chunker.py  test_embed.py  test_generator.py  test_obsidian.py  test_pipeline.py  test_readwise.py  test_retriever.py  test_vector_store.py
